--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ pygmentsUseClasses = true # new add
     
     avatarurl = "images/avatar.jpg" # Contain the path of the optional avatar in the static folder.
 
-    footercontent = "" # Add footer content
+    footercontent = "Copyright Christos Panagiotakopoulos" # Add footer content
     fixedbarContent = "Do you want to contact me privately? → " # Add fixedbar content
     fixedbarContentAfter = "Send me an email at chrispanag@gmail.com ;)" # Add fixedbar content after click
 
@@ -30,7 +30,9 @@ pygmentsUseClasses = true # new add
     hideCopyright = false
 
     # Custom CSS
-    custom_css = []
+    custom_css = [
+        "custom.css"
+    ]
 
     # Alignment of Mobile Menu items
     itemscentered = true
@@ -57,10 +59,10 @@ pygmentsUseClasses = true # new add
 
 # Menu links
 #
-#[[menu.main]]
-#    name = "Blog"
-#    weight = 1
-#    url  = "posts"
+[[menu.main]]
+    name = "Projects"
+    weight = 1
+    url  = "projects"
 #[[menu.main]]
 #    name = "About"
 #    weight = 2
