add more projects

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ pygmentsUseClasses = true # new add
 
     snsShare = false # new add
 
-    thumbnail = "images/tn.png" # default sns thumbnail
+    thumbnail = "images/thumb.png" # default sns thumbnail
 
     # Multilanguage mode
     langseparator = "|" # Separates menus from language selectors when site is multilingual.
