--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentsUseClasses = true # new add
 [params] # theme parameters
     author = "Christos Panagiotakopoulos" # Author's name.
     info = "Back-end Engineer | Chatbots Developer" # Author's job title or info.
-    description = "Christos' personal website" # Site description.
+    description = "Backend Engineer | Chatbots Developer" # Site description.
     keywords = "blog,software,christos,panagiotakopoulos,χρήστος,παναγιωτακόπουλος,developer,personal,chatbots,engineer,backend,frontend,facebook,bots,ebony,ebony-framework,node,nodejs,javascript,typescript,greece,athens" # Site keywords.
     
     avatarurl = "images/avatar.jpg" # Contain the path of the optional avatar in the static folder.
