--- a/config.toml
+++ b/config.toml
@@ -56,6 +56,10 @@ pygmentsUseClasses = true # new add
     name = "LinkedIn"
     weight = 2
     url = "https://www.linkedin.com/in/chrispanag/"
+[[params.social]]
+    name = "Twitter"
+    weight = 3
+    url = "https://www.twitter.com/ChrisPanag"
 
 # Menu links
 #
