--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://chrispanag.com/"
 languageCode = "en-us"
 title = "Christos Panagiotakopoulos"
-theme = ["base-theme", "coder-portfolio"]
+theme = ["coder-portfolio"]
 defaultcontentlanguage  = "en"
 
 paginate = 20 # Default number of pages per page in pagination.
@@ -10,6 +10,7 @@ pygmentsstyle = "b2" # Color-theme or style for syntax highlighting.
 pygmentscodefences = true # Enable code fence background highlighting.
 pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
 pygmentsUseClasses = true # new add
+googleAnalytics = "UA-63248109-4"
 
 # disqusShortname = "yourdiscussshortname" # Enable or disable Disqus.
 
@@ -46,7 +47,6 @@ pygmentsUseClasses = true # new add
 
     # Multilanguage mode
     langseparator = "|" # Separates menus from language selectors when site is multilingual.
-    googleAnalytics = "UA-63248109-4"
 
 # Social links
 [[params.social]]
